# python-calculator

./: setup.cfg
pythoncalculator/: __init__.py
tests/: test_division.py  test_multiply.py
